--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -17,6 +17,7 @@ html {
     width: 10px;
     background-color: #f5f5f5;
   }
+
   ::-webkit-scrollbar-thumb {
     border-radius: 2px;
     /* background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(6,37,129,1) 0%, rgba(56,166,227,1) 100%); */
@@ -27,6 +28,7 @@ html {
 }
 
 body {
+
   h1,
   h2,
   h3,
@@ -35,7 +37,9 @@ body {
   h6 {
     font-family: Raleway, sans-serif;
   }
-  font-family: "Open Sans", sans-serif !important;
+
+  font-family: "Open Sans",
+  sans-serif !important;
   color: #f5f5f5;
   background-color: #000000;
 
@@ -46,6 +50,7 @@ body {
         height: 10px !important;
         border-radius: 100% !important;
       }
+
       .active {
         background-color: #264fcc !important;
       }
@@ -72,13 +77,16 @@ body {
     font-weight: 900;
     font-family: Raleway;
   }
+
   #social {
     a:hover {
       text-decoration: none;
     }
+
     i {
       color: #f5f5f5 !important;
     }
+
     i:hover {
       color: #4169e1 !important;
     }
@@ -98,6 +106,7 @@ body {
     //     color: #4169e1 !important;
     // }
   }
+
   .nav-link:after {
     position: absolute;
     bottom: 0;
@@ -112,12 +121,15 @@ body {
     height: 2px;
     transition: all 0.5s;
   }
+
   .nav-link:hover {
     color: #f5f5f5 !important;
   }
+
   .nav-link:hover:after {
     width: 100%;
   }
+
   .active:after {
     position: absolute;
     bottom: 0;
@@ -130,6 +142,7 @@ body {
     background: #4169e1;
     height: 2px;
   }
+
   .active {
     color: #f5f5f5 !important;
   }
@@ -140,6 +153,7 @@ body {
         font-weight: 400;
       }
     }
+
     .dropdown-toggle:after {
       border: 0 !important;
     }
@@ -168,14 +182,17 @@ body {
         .dropdown-item {
           color: #f5f5f5 !important;
         }
+
         .dropdown-item:hover {
           background-color: #ffffff00 !important;
           color: #4169e1 !important;
         }
+
         .dropdown-item:focus {
           background-color: #ffffff00 !important;
         }
       }
+
       .disabled {
         color: #f5f5f58f !important;
       }
@@ -196,6 +213,7 @@ body {
   min-height: 950px;
   position: relative;
   overflow: hidden;
+
   &::before {
     background-image: url("https://res.cloudinary.com/okstate-lambdas/image/upload/v1642630224/General/colorado-retreat_gyoikx.jpg");
     background-repeat: no-repeat;
@@ -210,6 +228,7 @@ body {
     will-change: transform;
     z-index: -1;
   }
+
   // #overlay{
   //     background: rgba(0, 0, 0, 0.089);
   //     position: absolute;
@@ -232,6 +251,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+
   .overlay {
     height: 100%;
     width: 100%;
@@ -242,6 +262,7 @@ body {
     background: rgb(0, 0, 0);
     opacity: 0.5;
   }
+
   .video {
     position: absolute;
     top: 50%;
@@ -261,15 +282,18 @@ body {
 
 #rush-lambdas {
   background-color: white;
+
   h3,
   h4 {
     font-size: 2.2em;
   }
+
   .head-border {
     width: 10em;
     margin: 0 auto;
     border-bottom: 3px solid #264fcc;
   }
+
   img {
     max-width: 100%;
     width: 40rem;
@@ -281,26 +305,32 @@ body {
 
 #why-lambdas {
   background-color: #f5f5f5 !important;
+
   img {
     max-width: 100%;
     height: auto;
     border-radius: 1em;
     box-shadow: 0px 0px 3px 0px #000000;
   }
+
   h4 {
     font-size: 2.2em;
   }
+
   .head-border {
     width: 10em;
     margin: 0 auto;
     border-bottom: 3px solid #264fcc;
   }
+
   .bg-dark {
     background-color: #ebebeb !important;
   }
+
   .btn:active {
     transform: scale(0.98);
   }
+
   .carousel {
     .blockquote {
       footer {
@@ -311,6 +341,7 @@ body {
         font-size: 1.8rem;
       }
     }
+
     .carousel-control-prev-icon,
     .carousel-control-next-icon {
       height: 60px;
@@ -323,11 +354,13 @@ body {
       position: relative;
       top: 30%;
     }
+
     .carousel-control-prev-icon:after {
       content: "<";
       font-size: 55px;
       color: #212529 !important;
     }
+
     .carousel-control-next-icon:after {
       content: ">";
       font-size: 55px;
@@ -343,11 +376,13 @@ body {
   h3 {
     font-size: 2.2em;
   }
+
   .head-border {
     width: 10em;
     margin: 0 auto;
     border-bottom: 3px solid #264fcc;
   }
+
   .content {
     position: relative;
     width: 100%;
@@ -413,17 +448,21 @@ body {
       top: 100%;
     }
   }
+
   .content:hover {
     .content-overlay {
       opacity: 1;
     }
+
     .content-details {
       top: 85%;
       left: 50%;
       opacity: 1;
     }
   }
+
   .carousel {
+
     .carousel-control-prev-icon,
     .carousel-control-next-icon {
       height: 60px;
@@ -436,17 +475,20 @@ body {
       // position: relative;
       // top: 30%;
     }
+
     .carousel-control-prev-icon:after {
       content: "<";
       font-size: 55px;
       color: #212529 !important;
     }
+
     .carousel-control-next-icon:after {
       content: ">";
       font-size: 55px;
       color: #212529 !important;
     }
   }
+
   .btn:active {
     transform: scale(0.98);
   }
@@ -534,14 +576,17 @@ body {
 
 #chapter-roster {
   background-color: #dadada !important;
+
   h3 {
     font-size: 2.2em;
   }
+
   .head-border {
     width: 10em;
     margin: 0 auto;
     border-bottom: 3px solid #264fcc;
   }
+
   .content {
     position: relative;
     width: 100%;
@@ -603,21 +648,25 @@ body {
       top: 90%;
     }
   }
+
   .content:hover {
     .content-overlay {
       opacity: 1;
     }
+
     .content-details {
       top: 80%;
       left: 50%;
       opacity: 1;
     }
   }
+
   .tab-content {
     .roster {
       color: black;
     }
   }
+
   .btn:active {
     transform: scale(0.98);
   }
@@ -632,15 +681,19 @@ body {
 
 #footer {
   background-color: #000;
+
   p {
     font-size: 0.8em;
+
     span {
       a {
         color: #cecece;
       }
+
       a:active {
         text-decoration: none;
       }
+
       a:hover {
         text-decoration: none;
         color: #4169e1;
@@ -648,14 +701,17 @@ body {
       }
     }
   }
+
   #social {
     a:hover {
       text-decoration: none;
     }
+
     i {
       color: #cecece !important;
       font-size: 1.2em;
     }
+
     i:hover {
       color: #4169e1 !important;
       transition: color 0.2s;
@@ -691,10 +747,12 @@ body {
       cursor: pointer;
     }
   }
+
   .btn-img:hover {
     .img-wrap {
       background-color: black;
     }
+
     img {
       opacity: 0.7;
     }
@@ -721,6 +779,7 @@ body {
 
   .navbar {
     background-color: rgba(0, 0, 0, 0.8);
+
     .navbar-nav {
       .dropdown:hover {
         .dropdown-menu {
@@ -731,6 +790,7 @@ body {
 
       li {
         margin: 10px;
+
         .dropdown-item:hover {
           color: #4169e1 !important;
           background-color: #00000000 !important;
@@ -757,6 +817,7 @@ body {
         letter-spacing: 0.15em;
         margin-bottom: 0.5em;
       }
+
       p {
         font-size: 1em;
       }
@@ -767,6 +828,7 @@ body {
     #showcase {
       min-height: 500px;
     }
+
     #active-house {
       .content {
         position: relative;
@@ -800,6 +862,7 @@ body {
       }
 
       .carousel {
+
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
           height: 60px;
@@ -812,11 +875,13 @@ body {
           // position: relative;
           // top: 30%;
         }
+
         .carousel-control-prev-icon:after {
           content: "<";
           font-size: 55px;
           color: #212529 !important;
         }
+
         .carousel-control-next-icon:after {
           content: ">";
           font-size: 55px;
@@ -824,45 +889,54 @@ body {
         }
       }
     }
+
     #landing-showcase {
       .quotes {
         font-size: 2em;
       }
     }
   }
+
   @media (min-width: 720px) {
     .row-hero {
       height: 35rem !important;
     }
   }
+
   @media (max-width: 576px) {
     #footer {
       p {
         justify-content: center;
       }
+
       .social {
         justify-content: center !important;
+
         span {
           justify-content: center !important;
           align-items: center;
           align-self: center;
         }
       }
+
       .contact {
         align-items: center !important;
       }
     }
+
     #landing-showcase {
       .image-container {
         img {
           width: 30vh;
         }
       }
+
       .quotes {
         font-size: 1em;
       }
     }
   }
+
   @media (min-width: 576px) {
     .row-hero {
       height: 25rem !important;
